--- a/resources/lang/de/debitWizard.properties
+++ b/resources/lang/de/debitWizard.properties
@@ -12,4 +12,6 @@ sectionLogoTitle = Wo ist das Logo zu Lastschrift zu finden
 inputLogoTypeName = Logo
 logoURL = Logo-URL
 logoDefault = Standard-Logo
-
+inputName   = Name
+sectionNameTitle = Name
+storeName = Mandant
