--- a/resources/lang/de/debitWizard.properties
+++ b/resources/lang/de/debitWizard.properties
@@ -1,4 +1,4 @@
-wizardTitle = Lastschrift Einstellungen
+wizardTitle = Lastschrift
 shippingCountries = Lieferländer
 shippingCountriesTitle = In welche Länder soll Lastschrift zur Verfügung stehen?
 stepOneTitle = Einstellungen
