--- a/resources/lang/de/PaymentMethod.properties
+++ b/resources/lang/de/PaymentMethod.properties
@@ -2,7 +2,7 @@ bankDetails = "Lastschrift - Bankdaten"
 bankAccountOwner = "Inhaber:"
 bankName = "Bank:"
 bankIban = "IBAN:"
-bankSwift = "BIC/SWIFT:"
-reinitPaymentButton = "Bankdetails anzeigen"
+bankSwift = "BIC:"
+reinitPaymentButton = "Lastschrift - Bankdaten"
 paymentMethodName = "Lastschrift"
 bankAccountButtonLabel = "Abschließen"
