--- a/resources/lang/en/PaymentMethod.properties
+++ b/resources/lang/en/PaymentMethod.properties
@@ -2,7 +2,7 @@ bankDetails = "Debit - Bank details"
 bankAccountOwner = "Account owner:"
 bankName = "Bank:"
 bankIban = "IBAN:"
-bankSwift = "BIC/SWIFT:"
-reinitPaymentButton = "Show Bank details"
+bankSwift = "BIC:"
+reinitPaymentButton = "Debit - Bank details"
 paymentMethodName = "Debit"
 bankAccountButtonLabel = "Confirm"
