--- a/resources/lang/de/PaymentMethod.properties
+++ b/resources/lang/de/PaymentMethod.properties
@@ -1,8 +1,8 @@
 bankDetails = "Lastschrift - Bankdaten"
-bankAccountOwner = "Inhaber:"
-bankName = "Bank:"
-bankIban = "IBAN:"
-bankSwift = "BIC:"
+bankAccountOwner = "Inhaber"
+bankName = "Bank"
+bankIban = "IBAN"
+bankBic = "BIC"
 reinitPaymentButton = "Lastschrift - Bankdaten"
 paymentMethodName = "Lastschrift"
 bankAccountButtonLabel = "Abschließen"
