--- a/resources/lang/de/debitWizard.properties
+++ b/resources/lang/de/debitWizard.properties
@@ -1,17 +1,17 @@
-wizardTitle = Lastschrift
+wizardTitle = Lastschrift Einstellungen
 shippingCountries = Lieferländer
-shippingCountriesTitle = In welche Länder soll Lastschrift zur Verfügung stehen?
-stepOneTitle = Einstellungen
-sectionInfoPageTitle = Wo ist die Infoseite zu Lastschrift zu finden
+shippingCountriesTitle = In welchen Ländern soll Lastschrift zur Verfügung stehen?
+stepOneTitle = Lieferländer
+stepTwoTitle = Einstellungen
+sectionInfoPageTitle = Wo befindet sich die Infoseite zu Lastschrift
 inputInfoPageTypeName = Infoseite
 infoPageInternal = Infoseite Intern
 infoPageExternal = Infoseite Extern
 inputInfoPageNameInternal = Infoseite Intern
 inputInfoPageNameExternal = Infoseite Extern
-sectionLogoTitle = Wo ist das Logo zu Lastschrift zu finden
+sectionLogoTitle = Wo befindet sich das Logo zu Lastschrift
 inputLogoTypeName = Logo
 logoURL = Logo-URL
 logoDefault = Standard-Logo
-inputName   = Name
-sectionNameTitle = Name
 storeName = Mandant
+
