--- a/resources/lang/en/PaymentMethod.properties
+++ b/resources/lang/en/PaymentMethod.properties
@@ -1,8 +1,8 @@
 bankDetails = "Debit - Bank details"
-bankAccountOwner = "Account owner:"
-bankName = "Bank:"
-bankIban = "IBAN:"
-bankSwift = "BIC:"
+bankAccountOwner = "Account owner"
+bankName = "Bank"
+bankIban = "IBAN"
+bankBic = "BIC"
 reinitPaymentButton = "Debit - Bank details"
 paymentMethodName = "Debit"
 bankAccountButtonLabel = "Confirm"
