fix assistent checkbox for sepa

--- a/resources/lang/de/PaymentMethod.properties
+++ b/resources/lang/de/PaymentMethod.properties
@@ -3,6 +3,7 @@ bankAccountOwner = "Inhaber"
 bankName = "Bank"
 bankIban = "IBAN"
 bankBic = "BIC"
+sepaAgreement = "Hiermit willige ich zum SEPA-Mandat ein"
 reinitPaymentButton = "Lastschrift - Bankdaten"
 paymentMethodName = "Lastschrift"
 bankAccountButtonLabel = "Abschließen"
