--- a/resources/lang/de/debitWizard.properties
+++ b/resources/lang/de/debitWizard.properties
@@ -11,6 +11,7 @@ inputInfoPageNameInternal = Infoseite Intern
 inputInfoPageNameExternal = Infoseite Extern
 sectionLogoTitle = Wo befindet sich das Logo zu Lastschrift
 inputLogoTypeName = Logo
+sectionPaymentMethodIconTitle = Soll das Lastschrift-Logo bei der Vorschau der Zahlungsmethoden auf der Hompage angezeigt werden?
 logoURL = Logo-URL
 logoDefault = Standard-Logo
 storeName = Mandant
