--- a/resources/lang/en/PaymentMethod.properties
+++ b/resources/lang/en/PaymentMethod.properties
@@ -3,6 +3,7 @@ bankAccountOwner = "Account owner"
 bankName = "Bank"
 bankIban = "IBAN"
 bankBic = "BIC"
+sepaAgreement = "Hiermit willige ich zum SEPA-Mandat ein"
 reinitPaymentButton = "Debit - Bank details"
 paymentMethodName = "Debit"
 bankAccountButtonLabel = "Confirm"
