--- a/resources/lang/en/debitAssistent.properties
+++ b/resources/lang/en/debitAssistent.properties
@@ -1,4 +1,4 @@
-wizardTitle = Lastschrift Einstellungen
+assistentTitle = Lastschrift Einstellungen
 shippingCountries = Lieferländer
 shippingCountriesTitle = In welchen Ländern soll Lastschrift zur Verfügung stehen?
 stepOneTitle = Lieferländer
