fix payment properties remove unused class some refactoring

--- a/resources/lang/en/PaymentMethod.properties
+++ b/resources/lang/en/PaymentMethod.properties
@@ -3,7 +3,7 @@ bankAccountOwner = "Account owner"
 bankName = "Bank"
 bankIban = "IBAN"
 bankBic = "BIC"
-sepaAgreement = "Hiermit willige ich zum SEPA-Mandat ein"
+debitMandate = "Hiermit willige ich ein, die Zahlung von meinem Konto mittels Lastschrift einzuziehen. Zugleich weise ich mein Kreditinstitut an, die auf mein Konto gezogenn Lastschrift einzulösen."
 reinitPaymentButton = "Debit - Bank details"
 paymentMethodName = "Debit"
 bankAccountButtonLabel = "Confirm"
