--- a/resources/lang/de/PaymentMethod.properties
+++ b/resources/lang/de/PaymentMethod.properties
@@ -3,7 +3,7 @@ bankAccountOwner = "Inhaber"
 bankName = "Bank"
 bankIban = "IBAN"
 bankBic = "BIC"
-sepaAgreement = "Hiermit willige ich zum SEPA-Mandat ein"
+debitMandate = "Hiermit willige ich ein, die Zahlung von meinem Konto mittels Lastschrift einzuziehen. Zugleich weise ich mein Kreditinstitut an, die auf mein Konto gezogenn Lastschrift einzulösen."
 reinitPaymentButton = "Lastschrift - Bankdaten"
 paymentMethodName = "Lastschrift"
 bankAccountButtonLabel = "Abschließen"
