add user_guide documents improve assistent

--- a/resources/lang/de/PaymentMethod.properties
+++ b/resources/lang/de/PaymentMethod.properties
@@ -3,7 +3,8 @@ bankAccountOwner = "Inhaber"
 bankName = "Bank"
 bankIban = "IBAN"
 bankBic = "BIC"
-debitMandate = "Hiermit willige ich ein, die Zahlung von meinem Konto mittels Lastschrift einzuziehen. Zugleich weise ich mein Kreditinstitut an, die auf mein Konto gezogenn Lastschrift einzulösen."
+paymentMethodDebitMandate = "Hiermit willige ich ein, die Zahlung von meinem Konto mittels Lastschrift einzuziehen. Zugleich weise ich mein Kreditinstitut an, die auf mein Konto gezogenn Lastschrift einzulösen."
 reinitPaymentButton = "Lastschrift - Bankdaten"
 paymentMethodName = "Lastschrift"
+paymentMethodDescription = ""
 bankAccountButtonLabel = "Abschließen"
