--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -1,18 +1,21 @@
-assistentTitle = Lastschrift Einstellungen
+assistentTitle = Lastschrift
 shippingCountries = Lieferländer
-shippingCountriesTitle = In welchen Ländern soll Lastschrift zur Verfügung stehen?
+shippingCountriesTitle = Für welche Ländern soll Lastschrift zur Verfügung stehen?
 stepOneTitle = Lieferländer
-stepTwoTitle = Einstellungen
-sectionInfoPageTitle = Wo befindet sich die Infoseite zu Lastschrift
+stepTwoTitle = Optionale Einstellungen
+sectionInfoPageTitle = Soll in der Beschreibung der Zahlungsart ein Link zu den Details der Zahlungsart angezeigt werden?
+inputInfoPageTypeButton = Soll eine interne oder externe Infoseite verlinkt werden?
 inputInfoPageTypeName = Infoseite
-infoPageInternal = Infoseite Intern
+infoPageInternal = Interne Infoseite
 infoPageExternal = Infoseite Extern
-inputInfoPageNameInternal = Infoseite Intern
-inputInfoPageNameExternal = Infoseite Extern
-sectionLogoTitle = Wo befindet sich das Logo zu Lastschrift
+inputInfoPageNameInternal = Infoseite Intern (Eingabe der Kategorie-ID)
+inputInfoPageNameExternal = Infoseite Extern (Externe URL)
+sectionLogoTitle = Was für ein Logo soll für Lastschrift angezeigt werden?
 inputLogoTypeName = Logo
-sectionPaymentMethodIconTitle = Soll das Lastschrift-Logo bei der Vorschau der Zahlungsmethoden auf der Hompage angezeigt werden?
+inputLogoURLTypeName = Logo-URL
+sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart auf der Startseite anzeigt werden?
 logoURL = Logo-URL
 logoDefault = Standard-Logo
 storeName = Mandant
+additionalInformation = Hinweis zur Mehrsprachigkeit : Sie können Benennungen, die das Lastschrift-Plugin mitbringt im Menü "CMS » Mehrsprachigkeit" im Bereich "Debit" nach Ihren Bedürfnissen in allen verfügbaren Systemsprachen anpassen.
 
