--- a/resources/lang/en/PaymentMethod.properties
+++ b/resources/lang/en/PaymentMethod.properties
@@ -3,7 +3,8 @@ bankAccountOwner = "Account owner"
 bankName = "Bank"
 bankIban = "IBAN"
 bankBic = "BIC"
-debitMandate = "Hiermit willige ich ein, die Zahlung von meinem Konto mittels Lastschrift einzuziehen. Zugleich weise ich mein Kreditinstitut an, die auf mein Konto gezogenn Lastschrift einzulösen."
+paymentMethodDebitMandate = "I hereby agree to collect the payment from my account by direct debit. At the same time, I instruct my credit institution to redeem the direct debit drawn into my account."
 reinitPaymentButton = "Debit - Bank details"
 paymentMethodName = "Debit"
+paymentMethodDescription = ""
 bankAccountButtonLabel = "Confirm"
