--- a/resources/lang/en/debitAssistent.properties
+++ b/resources/lang/en/debitAssistent.properties
@@ -1,18 +1,21 @@
-assistentTitle = Lastschrift Einstellungen
-shippingCountries = Lieferländer
-shippingCountriesTitle = In welchen Ländern soll Lastschrift zur Verfügung stehen?
-stepOneTitle = Lieferländer
-stepTwoTitle = Einstellungen
-sectionInfoPageTitle = Wo befindet sich die Infoseite zu Lastschrift
-inputInfoPageTypeName = Infoseite
-infoPageInternal = Infoseite Intern
-infoPageExternal = Infoseite Extern
-inputInfoPageNameInternal = Infoseite Intern
-inputInfoPageNameExternal = Infoseite Extern
-sectionLogoTitle = Wo befindet sich das Logo zu Lastschrift
+assistentTitle = Debit
+shippingCountries = Shipping countries
+shippingCountriesTitle = For which countries should direct debit be available?
+stepOneTitle = Shipping countries
+stepTwoTitle = Optional settings
+sectionInfoPageTitle = Should a link to the details of the payment method be displayed in the description of the payment method?
+inputInfoPageTypeButton = Should an internal or external info page be linked?
+inputInfoPageTypeName = Info page
+infoPageInternal = Internal info page
+infoPageExternal = External info page
+inputInfoPageNameInternal = Internal info page (entering the category ID)
+inputInfoPageNameExternal = External info page (external URL)
+sectionLogoTitle = What kind of logo should be displayed for direct debit?
 inputLogoTypeName = Logo
-sectionPaymentMethodIconTitle = Soll das Lastschrift-Logo bei der Vorschau der Zahlungsmethoden auf der Hompage angezeigt werden?
+inputLogoURLTypeName = Logo-URL
+sectionPaymentMethodIconTitle = Should the payment method logo be displayed on the home page?
 logoURL = Logo-URL
 logoDefault = Standard-Logo
 storeName = Mandant
+additionalInformation = Note about multilingualism : You can adjust the text elements provided by the Debit plugin in the "CMS » Multilingualism" menu. You can store translations for all plentymarkets system languages.
 
