get correct local language change toggle button to radioGroup in assistant

--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -1,6 +1,8 @@
 assistentTitle = Lastschrift
+assistentNo = Nein
+assistentYes = Ja
 shippingCountries = Lieferländer
-shippingCountriesTitle = Für welche Ländern soll Lastschrift zur Verfügung stehen?
+shippingCountriesTitle = Für welche Länder soll Lastschrift zur Verfügung stehen?
 stepOneTitle = Lieferländer
 stepTwoTitle = Optionale Einstellungen
 sectionInfoPageTitle = Soll in der Beschreibung der Zahlungsart ein Link zu den Details der Zahlungsart angezeigt werden?
