--- a/resources/lang/en/debitAssistent.properties
+++ b/resources/lang/en/debitAssistent.properties
@@ -1,4 +1,6 @@
 assistentTitle = Debit
+assistentNo = No
+assistentYes = Yes
 shippingCountries = Shipping countries
 shippingCountriesTitle = For which countries should direct debit be available?
 stepOneTitle = Shipping countries
