change assistant texts

--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -2,9 +2,9 @@ assistentTitle = Lastschrift
 assistentNo = Nein
 assistentYes = Ja
 shippingCountries = Lieferländer
-shippingCountriesTitle = Für welche Länder soll Lastschrift zur Verfügung stehen?
+shippingCountriesTitle = Für welche Länder soll die Zahlungsart Lastschrift zur Verfügung stehen?
 stepOneTitle = Lieferländer
-stepTwoTitle = Optionale Einstellungen
+stepTwoTitle = Webshop-Einstellungen
 sectionInfoPageTitle = Soll in der Beschreibung der Zahlungsart ein Link zu den Details der Zahlungsart angezeigt werden?
 inputInfoPageTypeButton = Soll eine interne oder externe Infoseite verlinkt werden?
 inputInfoPageTypeName = Infoseite
@@ -12,12 +12,11 @@ infoPageInternal = Interne Infoseite
 infoPageExternal = Infoseite Extern
 inputInfoPageNameInternal = Infoseite Intern (Eingabe der Kategorie-ID)
 inputInfoPageNameExternal = Infoseite Extern (Externe URL)
-sectionLogoTitle = Was für ein Logo soll für Lastschrift angezeigt werden?
+sectionLogoTitle = Welches Logo soll für die Zahlungsart Lastschrift im Webshop angezeigt werden?
 inputLogoTypeName = Logo
 inputLogoURLTypeName = Logo-URL
-sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart auf der Startseite anzeigt werden?
+sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart auf der Startseite des Webshops angezeigt werden?
 logoURL = Logo-URL
 logoDefault = Standard-Logo
 storeName = Mandant
-additionalInformation = Hinweis zur Mehrsprachigkeit : Sie können Benennungen, die das Lastschrift-Plugin mitbringt im Menü "CMS » Mehrsprachigkeit" im Bereich "Debit" nach Ihren Bedürfnissen in allen verfügbaren Systemsprachen anpassen.
-
+additionalInformation = Hinweis: Betreibst du deinen Webshop in einer weiteren Sprache? Im Menü "CMS » Mehrsprachigkeit" solltest du dann im Bereich "Debit" die Texte der Zahlungsart in der jeweiligen Systemsprache anpassen.
