add description tags for assistant add abort button in bank overlay do not require any delivery country in debit assistant load debit option from customer correctly

--- a/resources/lang/de/PaymentMethod.properties
+++ b/resources/lang/de/PaymentMethod.properties
@@ -8,3 +8,4 @@ reinitPaymentButton = "Lastschrift - Bankdaten"
 paymentMethodName = "Lastschrift"
 paymentMethodDescription = ""
 bankAccountButtonLabel = "Abschließen"
+bankAccountCancelButtonLabel = "Abbrechen"
