--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -3,20 +3,26 @@ assistentNo = Nein
 assistentYes = Ja
 shippingCountries = Lieferländer
 shippingCountriesTitle = Für welche Länder soll die Zahlungsart Lastschrift zur Verfügung stehen?
+shippingCountriesDescription =
 stepOneTitle = Lieferländer
 stepTwoTitle = Webshop-Einstellungen
-sectionInfoPageTitle = Soll in der Beschreibung der Zahlungsart ein Link zu den Details der Zahlungsart angezeigt werden?
-inputInfoPageTypeButton = Soll eine interne oder externe Infoseite verlinkt werden?
-inputInfoPageTypeName = Infoseite
+infoPageTitle = Soll in der Beschreibung der Zahlungsart ein Link zu den Details der Zahlungsart angezeigt werden?
+infoPageDescription =
+infoPageTypeTitle = Soll eine interne oder externe Infoseite verlinkt werden?
+infoPageTypeDescription =
+infoPageTypeName = Infoseite
 infoPageInternal = Interne Infoseite
 infoPageExternal = Infoseite Extern
-inputInfoPageNameInternal = Infoseite Intern (Eingabe der Kategorie-ID)
-inputInfoPageNameExternal = Infoseite Extern (Externe URL)
+infoPageNameInternal = Infoseite Intern (Eingabe der Kategorie-ID)
+infoPageNameExternal = Infoseite Extern (Externe URL)
 sectionLogoTitle = Welches Logo soll für die Zahlungsart Lastschrift im Webshop angezeigt werden?
-inputLogoTypeName = Logo
-inputLogoURLTypeName = Logo-URL
+sectionLogoDescription =
+logoTypeName = Logo
+logoURLTypeName = Logo-URL
 sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart auf der Startseite des Webshops angezeigt werden?
+sectionPaymentMethodIconDescription =
 logoURL = Logo-URL
 logoDefault = Standard-Logo
 storeName = Mandant
-additionalInformation = Hinweis: Betreibst du deinen Webshop in einer weiteren Sprache? Im Menü "CMS » Mehrsprachigkeit" solltest du dann im Bereich "Debit" die Texte der Zahlungsart in der jeweiligen Systemsprache anpassen.
+additionalInformationTitle =
+additionalInformationDescription = Hinweis: Betreibst du deinen Webshop in einer weiteren Sprache? Im Menü "CMS » Mehrsprachigkeit" solltest du dann im Bereich "Debit" die Texte der Zahlungsart in der jeweiligen Systemsprache anpassen.
