--- a/resources/lang/en/debitAssistent.properties
+++ b/resources/lang/en/debitAssistent.properties
@@ -3,21 +3,26 @@ assistentNo = No
 assistentYes = Yes
 shippingCountries = Shipping countries
 shippingCountriesTitle = For which countries should direct debit be available?
+shippingCountriesDescription =
 stepOneTitle = Shipping countries
 stepTwoTitle = Optional settings
-sectionInfoPageTitle = Should a link to the details of the payment method be displayed in the description of the payment method?
-inputInfoPageTypeButton = Should an internal or external info page be linked?
-inputInfoPageTypeName = Info page
+infoPageTitle = Should a link to the details of the payment method be displayed in the description of the payment method?
+infoPageDescription =
+infoPageTypeTitle = Should an internal or external info page be linked?
+infoPageTypeDescription =
+infoPageTypeName = Info page
 infoPageInternal = Internal info page
 infoPageExternal = External info page
-inputInfoPageNameInternal = Internal info page (entering the category ID)
-inputInfoPageNameExternal = External info page (external URL)
+infoPageNameInternal = Internal info page (entering the category ID)
+infoPageNameExternal = External info page (external URL)
 sectionLogoTitle = What kind of logo should be displayed for direct debit?
-inputLogoTypeName = Logo
-inputLogoURLTypeName = Logo-URL
+sectionLogoDescription =
+logoTypeName = Logo
+logoURLTypeName = Logo-URL
 sectionPaymentMethodIconTitle = Should the payment method logo be displayed on the home page?
+sectionPaymentMethodIconDescription =
 logoURL = Logo-URL
 logoDefault = Standard-Logo
 storeName = Mandant
-additionalInformation = Note about multilingualism : You can adjust the text elements provided by the Debit plugin in the "CMS » Multilingualism" menu. You can store translations for all plentymarkets system languages.
-
+additionalInformationTitle =
+additionalInformationDescription = Note about multilingualism : You can adjust the text elements provided by the Debit plugin in the "CMS » Multilingualism" menu. You can store translations for all plentymarkets system languages.
