--- a/resources/lang/en/PaymentMethod.properties
+++ b/resources/lang/en/PaymentMethod.properties
@@ -8,3 +8,4 @@ reinitPaymentButton = "Debit - Bank details"
 paymentMethodName = "Debit"
 paymentMethodDescription = ""
 bankAccountButtonLabel = "Confirm"
+bankAccountCancelButtonLabel = "Abort"
