assistant requested changes

--- a/resources/lang/en/debitAssistent.properties
+++ b/resources/lang/en/debitAssistent.properties
@@ -5,7 +5,8 @@ shippingCountries = Shipping countries
 shippingCountriesTitle = For which countries should direct debit be available?
 shippingCountriesDescription =
 stepOneTitle = Shipping countries
-stepTwoTitle = Optional settings
+stepTwoTitle = Information
+stepTwoThree = Logo
 infoPageTitle = Should a link to the details of the payment method be displayed in the description of the payment method?
 infoPageDescription =
 infoPageTypeTitle = Should an internal or external info page be linked?
@@ -21,8 +22,6 @@ logoTypeName = Logo
 logoURLTypeName = Logo-URL
 sectionPaymentMethodIconTitle = Should the payment method logo be displayed on the home page?
 sectionPaymentMethodIconDescription =
-logoURL = Logo-URL
+logoURLDescription = Logo-URL
 logoDefault = Standard-Logo
 storeName = Mandant
-additionalInformationTitle =
-additionalInformationDescription = Note about multilingualism : You can adjust the text elements provided by the Debit plugin in the "CMS » Multilingualism" menu. You can store translations for all plentymarkets system languages.
