--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -5,7 +5,8 @@ shippingCountries = Lieferländer
 shippingCountriesTitle = Für welche Länder soll die Zahlungsart Lastschrift zur Verfügung stehen?
 shippingCountriesDescription =
 stepOneTitle = Lieferländer
-stepTwoTitle = Webshop-Einstellungen
+stepTwoTitle = Zusatzinformation
+stepTwoThree = Logo
 infoPageTitle = Soll in der Beschreibung der Zahlungsart ein Link zu den Details der Zahlungsart angezeigt werden?
 infoPageDescription =
 infoPageTypeTitle = Soll eine interne oder externe Infoseite verlinkt werden?
@@ -15,14 +16,12 @@ infoPageInternal = Interne Infoseite
 infoPageExternal = Infoseite Extern
 infoPageNameInternal = Infoseite Intern (Eingabe der Kategorie-ID)
 infoPageNameExternal = Infoseite Extern (Externe URL)
-sectionLogoTitle = Welches Logo soll für die Zahlungsart Lastschrift im Webshop angezeigt werden?
-sectionLogoDescription =
+sectionLogoTitle =
+sectionLogoDescription = Soll ein individuelles Logo für die Zahlungsart verwendet werden?
 logoTypeName = Logo
 logoURLTypeName = Logo-URL
 sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart auf der Startseite des Webshops angezeigt werden?
 sectionPaymentMethodIconDescription =
-logoURL = Logo-URL
+logoURLDescription = Logo-URL
 logoDefault = Standard-Logo
 storeName = Mandant
-additionalInformationTitle =
-additionalInformationDescription = Hinweis: Betreibst du deinen Webshop in einer weiteren Sprache? Im Menü "CMS » Mehrsprachigkeit" solltest du dann im Bereich "Debit" die Texte der Zahlungsart in der jeweiligen Systemsprache anpassen.
