add option for guest order

--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -4,9 +4,11 @@ assistentYes = Ja
 shippingCountries = Lieferländer
 shippingCountriesTitle = Für welche Länder soll die Zahlungsart Lastschrift zur Verfügung stehen?
 shippingCountriesDescription =
-stepOneTitle = Lieferländer
+stepOneTitle = Verfügbarkeit
 stepTwoTitle = Zusatzinformation
 stepTwoThree = Logo
+allowDebitForGuestTitle = Soll für Gastbestellungen die Zahlungsart Lastschrift zur Verfügung stehen?
+allowDebitForGuestDescription =
 infoPageTitle = Soll in der Beschreibung der Zahlungsart ein Link zu den Details der Zahlungsart angezeigt werden?
 infoPageDescription =
 infoPageTypeTitle = Soll eine interne oder externe Infoseite verlinkt werden?
