--- a/resources/lang/en/debitAssistent.properties
+++ b/resources/lang/en/debitAssistent.properties
@@ -7,6 +7,8 @@ shippingCountriesDescription =
 stepOneTitle = Shipping countries
 stepTwoTitle = Information
 stepTwoThree = Logo
+allowDebitForGuestTitle = Soll für Gastbestellungen die Zahlungsart Lastschrift zur Verfügung stehen?
+allowDebitForGuestDescription =
 infoPageTitle = Should a link to the details of the payment method be displayed in the description of the payment method?
 infoPageDescription =
 infoPageTypeTitle = Should an internal or external info page be linked?
