ADD explanations and descriptions

--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -2,22 +2,22 @@ assistentTitle = Lastschrift
 assistentNo = Nein
 assistentYes = Ja
 shippingCountries = Lieferländer
-shippingCountriesTitle = Für welche Länder soll die Zahlungsart Lastschrift zur Verfügung stehen?
-shippingCountriesDescription =
+shippingCountriesTitle = Für welche Lieferländer soll die Zahlungsart Lastschrift zur Verfügung stehen?
+shippingCountriesDescription = Aktiviere die Lieferländer, für die die Zahlungsart bei Auftragseingang im Webshop wählbar sein soll.
 stepOneTitle = Verfügbarkeit
 stepTwoTitle = Zusatzinformation
 stepTwoThree = Logo
-allowDebitForGuestTitle = Soll für Gastbestellungen die Zahlungsart Lastschrift zur Verfügung stehen?
+allowDebitForGuestTitle = Soll die Zahlungsart Lastschrift für Gastbestellungen im Webshop zur Verfügung stehen?
 allowDebitForGuestDescription =
 infoPageTitle = Soll in der Beschreibung der Zahlungsart ein Link zu den Details der Zahlungsart angezeigt werden?
 infoPageDescription =
-infoPageTypeTitle = Soll eine interne oder externe Infoseite verlinkt werden?
-infoPageTypeDescription =
+infoPageTypeTitle = Soll eine interne oder externe Seite mit Zusatzinformationen verlinkt werden?
+infoPageTypeDescription = Die Zusatzinformationen zeigen deinen Kunden genauere Erläuterungen zur Zahlungsart Lastschrift an.
 infoPageTypeName = Infoseite
-infoPageInternal = Interne Infoseite
-infoPageExternal = Infoseite Extern
-infoPageNameInternal = Infoseite Intern (Eingabe der Kategorie-ID)
-infoPageNameExternal = Infoseite Extern (Externe URL)
+infoPageInternal = Interne Infoseite im Webshop
+infoPageExternal = Externe Infoseite
+infoPageNameInternal = Gib die ID der Kategorie ein, in der deine Seite mit den Zusatzinformationen zu angebotenen Zahlungsarten angelegt ist.
+infoPageNameExternal = Gib die URL zur externen Seite mit den Zusatzinformationen an.
 sectionLogoTitle =
 sectionLogoDescription = Soll ein individuelles Logo für die Zahlungsart verwendet werden?
 logoTypeName = Logo
