ADD/CHANGE texts

--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -3,7 +3,7 @@ assistentNo = Nein
 assistentYes = Ja
 shippingCountries = Lieferländer
 shippingCountriesTitle = Für welche Lieferländer soll die Zahlungsart Lastschrift zur Verfügung stehen?
-shippingCountriesDescription = Aktiviere die Lieferländer, für die die Zahlungsart bei Auftragseingang im Webshop wählbar sein soll.
+shippingCountriesDescription = Aktiviere die Lieferländer, für die die Zahlungsart im Webshop wählbar sein soll.
 stepOneTitle = Verfügbarkeit
 stepTwoTitle = Zusatzinformation
 stepTwoThree = Logo
@@ -16,14 +16,14 @@ infoPageTypeDescription = Die Zusatzinformationen zeigen deinen Kunden genauere 
 infoPageTypeName = Infoseite
 infoPageInternal = Interne Infoseite im Webshop
 infoPageExternal = Externe Infoseite
-infoPageNameInternal = Gib die ID der Kategorie ein, in der deine Seite mit den Zusatzinformationen zu angebotenen Zahlungsarten angelegt ist.
+infoPageNameInternal = Gib die ID der Kategorie ein, in der deine Seite mit den Zusatzinformationen angelegt ist.
 infoPageNameExternal = Gib die URL zur externen Seite mit den Zusatzinformationen an.
 sectionLogoTitle =
-sectionLogoDescription = Soll ein individuelles Logo für die Zahlungsart verwendet werden?
+sectionLogoDescription = Soll im Webshop ein individuelles Logo für die Zahlungsart angezeigt werden?
 logoTypeName = Logo
 logoURLTypeName = Logo-URL
 sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart auf der Startseite des Webshops angezeigt werden?
-sectionPaymentMethodIconDescription =
-logoURLDescription = Logo-URL
+sectionPaymentMethodIconDescription = Aktivierst du diese Option nicht, wird ein bereits hinterlegtes Standard-Logo im Webshop angezeigt.
+logoURLDescription = Gib die URL zum gewünschten Logo an.
 logoDefault = Standard-Logo
 storeName = Mandant
