--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -19,11 +19,11 @@ infoPageExternal = Externe Infoseite
 infoPageNameInternal = Gib die ID der Kategorie ein, in der deine Seite mit den Zusatzinformationen angelegt ist.
 infoPageNameExternal = Gib die URL zur externen Seite mit den Zusatzinformationen an.
 sectionLogoTitle =
-sectionLogoDescription = Soll im Webshop ein individuelles Logo für die Zahlungsart angezeigt werden?
+sectionLogoDescription = Soll im Webshop ein individuelles Logo für die Zahlungsart angezeigt werden? Aktivierst du diese Option nicht, wird das bereits automatisch hinterlegte Standard-Logo im Webshop angezeigt.
 logoTypeName = Logo
 logoURLTypeName = Logo-URL
 sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart auf der Startseite des Webshops angezeigt werden?
-sectionPaymentMethodIconDescription = Aktivierst du diese Option nicht, wird ein bereits hinterlegtes Standard-Logo im Webshop angezeigt.
+sectionPaymentMethodIconDescription =
 logoURLDescription = Gib die URL zum gewünschten Logo an.
 logoDefault = Standard-Logo
 storeName = Mandant
