--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -21,8 +21,8 @@ infoPageNameExternal = Gib die URL zur externen Seite mit den Zusatzinformatione
 sectionLogoTitle =
 sectionLogoDescription = Soll im Webshop ein individuelles Logo für die Zahlungsart angezeigt werden? Aktivierst du diese Option nicht, wird das bereits automatisch hinterlegte Standard-Logo im Webshop angezeigt.
 logoTypeName = Logo
-logoURLTypeName = Logo-URL
-sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart auf der Startseite des Webshops angezeigt werden?
+logoURLTypeName = Soll das Logo der Zahlungsart auf der Startseite des Webshops angezeigt werden?
+sectionPaymentMethodIconTitle = Logo-URL
 sectionPaymentMethodIconDescription =
 logoURLDescription = Gib die URL zum gewünschten Logo an.
 logoDefault = Standard-Logo
