DELETE unnecessary description

--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -24,6 +24,6 @@ logoTypeName = Logo
 logoURLTypeName = Gib die URL zum gewünschten Logo an.
 sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart auf der Startseite des Webshops angezeigt werden?
 sectionPaymentMethodIconDescription =
-logoURLDescription = Logo-URL
+logoURLDescription = 
 logoDefault = Standard-Logo
 storeName = Mandant
