--- a/resources/lang/de/debitAssistent.properties
+++ b/resources/lang/de/debitAssistent.properties
@@ -18,12 +18,12 @@ infoPageInternal = Interne Infoseite im Webshop
 infoPageExternal = Externe Infoseite
 infoPageNameInternal = Gib die ID der Kategorie ein, in der deine Seite mit den Zusatzinformationen angelegt ist.
 infoPageNameExternal = Gib die URL zur externen Seite mit den Zusatzinformationen an.
-sectionLogoTitle =
-sectionLogoDescription = Soll im Webshop ein individuelles Logo für die Zahlungsart angezeigt werden? Aktivierst du diese Option nicht, wird das bereits automatisch hinterlegte Standard-Logo im Webshop angezeigt.
+sectionLogoTitle = Soll im Webshop ein individuelles Logo für die Zahlungsart angezeigt werden?
+sectionLogoDescription = Aktivierst du diese Option nicht, wird das bereits automatisch hinterlegte Standard-Logo im Webshop angezeigt.
 logoTypeName = Logo
 logoURLTypeName = Gib die URL zum gewünschten Logo an.
 sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart auf der Startseite des Webshops angezeigt werden?
 sectionPaymentMethodIconDescription =
-logoURLDescription = 
+logoURLDescription =
 logoDefault = Standard-Logo
 storeName = Mandant
