--- a/resources/lang/de/debitAssistant.properties
+++ b/resources/lang/de/debitAssistant.properties
@@ -1,6 +1,6 @@
-assistentTitle = Lastschrift
-assistentNo = Nein
-assistentYes = Ja
+assistantTitle = Lastschrift
+assistantNo = Nein
+assistantYes = Ja
 shippingCountries = Lieferländer
 shippingCountriesTitle = Für welche Lieferländer soll die Zahlungsart Lastschrift zur Verfügung stehen?
 shippingCountriesDescription = Aktiviere die Lieferländer, für die die Zahlungsart im Webshop wählbar sein soll.
