--- a/resources/lang/en/debitAssistant.properties
+++ b/resources/lang/en/debitAssistant.properties
@@ -1,6 +1,6 @@
-assistentTitle = Debit
-assistentNo = No
-assistentYes = Yes
+assistantTitle = Debit
+assistantNo = No
+assistantYes = Yes
 shippingCountries = Shipping countries
 shippingCountriesTitle = For which countries should direct debit be available?
 shippingCountriesDescription =
