--- a/resources/lang/de/debitAssistant.properties
+++ b/resources/lang/de/debitAssistant.properties
@@ -9,7 +9,7 @@ stepTwoTitle = Zusatzinformation
 stepTwoThree = Logo
 allowDebitForGuestTitle = Soll die Zahlungsart Lastschrift für Gastbestellungen im Webshop zur Verfügung stehen?
 allowDebitForGuestDescription =
-infoPageTitle = Soll in der Beschreibung der Zahlungsart ein Link zu den Details der Zahlungsart angezeigt werden?
+infoPageTitle = Soll in der Beschreibung der Zahlungsart ein Link zu einer zusätzlichen Informationsseite angezeigt werden?
 infoPageDescription =
 infoPageTypeTitle = Soll eine interne oder externe Seite mit Zusatzinformationen verlinkt werden?
 infoPageTypeDescription = Die Zusatzinformationen zeigen deinen Kunden genauere Erläuterungen zur Zahlungsart Lastschrift an.
@@ -22,7 +22,7 @@ sectionLogoTitle = Soll im Webshop ein individuelles Logo für die Zahlungsart a
 sectionLogoDescription = Aktivierst du diese Option nicht, wird das bereits automatisch hinterlegte Standard-Logo im Webshop angezeigt.
 logoTypeName = Logo
 logoURLTypeName = Gib die URL zum gewünschten Logo an.
-sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart auf der Startseite des Webshops angezeigt werden?
+sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart in deinem Webshop angezeigt werden?
 sectionPaymentMethodIconDescription =
 logoURLDescription =
 logoDefault = Standard-Logo
