--- a/resources/lang/de/debitAssistant.properties
+++ b/resources/lang/de/debitAssistant.properties
@@ -22,8 +22,8 @@ sectionLogoTitle = Soll im Webshop ein individuelles Logo für die Zahlungsart a
 sectionLogoDescription = Aktivierst du diese Option nicht, wird das bereits automatisch hinterlegte Standard-Logo im Webshop angezeigt.
 logoTypeName = Logo
 logoURLTypeName = Gib die URL zum gewünschten Logo an.
-sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart in deinem Webshop angezeigt werden?
-sectionPaymentMethodIconDescription =
+sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart im Footer deines Webshops angezeigt werden?
+sectionPaymentMethodIconDescription = 
 logoURLDescription =
 logoDefault = Standard-Logo
 storeName = Mandant
