--- a/resources/lang/de/debitAssistant.properties
+++ b/resources/lang/de/debitAssistant.properties
@@ -5,7 +5,7 @@ shippingCountries = Lieferländer
 shippingCountriesTitle = Für welche Lieferländer soll die Zahlungsart Lastschrift zur Verfügung stehen?
 shippingCountriesDescription = Aktiviere die Lieferländer, für die die Zahlungsart im Webshop wählbar sein soll.
 stepOneTitle = Verfügbarkeit
-stepTwoTitle = Zusatzinformation
+stepTwoTitle = Zusatzinformationen
 stepTwoThree = Logo
 allowDebitForGuestTitle = Soll die Zahlungsart Lastschrift für Gastbestellungen im Webshop zur Verfügung stehen?
 allowDebitForGuestDescription =
@@ -23,7 +23,7 @@ sectionLogoDescription = Aktivierst du diese Option nicht, wird das bereits auto
 logoTypeName = Logo
 logoURLTypeName = Gib die URL zum gewünschten Logo an.
 sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart im Footer deines Webshops angezeigt werden?
-sectionPaymentMethodIconDescription = 
+sectionPaymentMethodIconDescription =
 logoURLDescription =
 logoDefault = Standard-Logo
 storeName = Mandant
