ADD English translations of assistant steps and descriptions

--- a/resources/lang/de/debitAssistant.properties
+++ b/resources/lang/de/debitAssistant.properties
@@ -9,7 +9,7 @@ stepTwoTitle = Zusatzinformationen
 stepTwoThree = Logo
 allowDebitForGuestTitle = Soll die Zahlungsart Lastschrift für Gastbestellungen im Webshop zur Verfügung stehen?
 allowDebitForGuestDescription =
-infoPageTitle = Soll in der Beschreibung der Zahlungsart ein Link zu einer zusätzlichen Informationsseite angezeigt werden?
+infoPageTitle = Soll der Beschreibungstext der Zahlungsart im Checkout einen Link zu einer zusätzlichen Informationsseite enthalten?
 infoPageDescription =
 infoPageTypeTitle = Soll eine interne oder externe Seite mit Zusatzinformationen verlinkt werden?
 infoPageTypeDescription = Die Zusatzinformationen zeigen deinen Kunden genauere Erläuterungen zur Zahlungsart Lastschrift an.
@@ -19,7 +19,7 @@ infoPageExternal = Externe Infoseite
 infoPageNameInternal = Gib die ID der Kategorie ein, in der deine Seite mit den Zusatzinformationen angelegt ist.
 infoPageNameExternal = Gib die URL zur externen Seite mit den Zusatzinformationen an.
 sectionLogoTitle = Soll im Webshop ein individuelles Logo für die Zahlungsart angezeigt werden?
-sectionLogoDescription = Aktivierst du diese Option nicht, wird das bereits automatisch hinterlegte Standard-Logo im Webshop angezeigt.
+sectionLogoDescription = Standardmäßig wird ein automatisch hinterlegtes Standard-Logo im Webshop angezeigt. Aktiviere diese Option, um ein individuelles Logo für die Zahlungsart anzuzeigen.
 logoTypeName = Logo
 logoURLTypeName = Gib die URL zum gewünschten Logo an.
 sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart im Footer deines Webshops angezeigt werden?
