--- a/resources/lang/en/debitAssistant.properties
+++ b/resources/lang/en/debitAssistant.properties
@@ -2,28 +2,28 @@ assistantTitle = Debit
 assistantNo = No
 assistantYes = Yes
 shippingCountries = Shipping countries
-shippingCountriesTitle = For which countries should direct debit be available?
-shippingCountriesDescription =
-stepOneTitle = Shipping countries
-stepTwoTitle = Information
+shippingCountriesTitle = For which countries of delivery should the payment method debit be available?
+shippingCountriesDescription = Activate the countries of delivery for which the payment method should be available in the online store.
+stepOneTitle = Countries of delivery
+stepTwoTitle = Additional information
 stepTwoThree = Logo
-allowDebitForGuestTitle = Soll für Gastbestellungen die Zahlungsart Lastschrift zur Verfügung stehen?
+allowDebitForGuestTitle = Should the payment method debit be available for guest orders?
 allowDebitForGuestDescription =
-infoPageTitle = Should a link to the details of the payment method be displayed in the description of the payment method?
+infoPageTitle = Should the description of the payment method in the checkout contain a link to a page with additional information?
 infoPageDescription =
-infoPageTypeTitle = Should an internal or external info page be linked?
-infoPageTypeDescription =
+infoPageTypeTitle = Should an internal or external information page be linked?
+infoPageTypeDescription = The information page offers your customers additional information on the payment method.
 infoPageTypeName = Info page
-infoPageInternal = Internal info page
+infoPageInternal = Internal info page in the online store
 infoPageExternal = External info page
-infoPageNameInternal = Internal info page (entering the category ID)
-infoPageNameExternal = External info page (external URL)
-sectionLogoTitle = What kind of logo should be displayed for direct debit?
-sectionLogoDescription =
+infoPageNameInternal = Enter the ID of the category in which your internal info page is available.
+infoPageNameExternal = Enter the URL of the external info page.
+sectionLogoTitle = Do you want to display an individually chosen logo for the payment method?
+sectionLogoDescription = An automatically provided logo is displayed by default in the online store. Activate the option to display an individually chosen logo.
 logoTypeName = Logo
-logoURLTypeName = Logo-URL
-sectionPaymentMethodIconTitle = Should the payment method logo be displayed on the home page?
+logoURLTypeName = Enter the URL of the desired logo.
+sectionPaymentMethodIconTitle = Should the logo of the payment method be displayed in the footer of your online store?
 sectionPaymentMethodIconDescription =
 logoURLDescription = Logo-URL
-logoDefault = Standard-Logo
-storeName = Mandant
+logoDefault = Default logo
+storeName = Client
