choose logo from webspace choose category id use checkbox instead of binary radio buttons

--- a/resources/lang/de/debitAssistant.properties
+++ b/resources/lang/de/debitAssistant.properties
@@ -16,14 +16,14 @@ infoPageTypeDescription = Die Zusatzinformationen zeigen deinen Kunden genauere 
 infoPageTypeName = Infoseite
 infoPageInternal = Interne Infoseite im Webshop
 infoPageExternal = Externe Infoseite
-infoPageNameInternal = Gib die ID der Kategorie ein, in der deine Seite mit den Zusatzinformationen angelegt ist.
+infoPageNameInternal = Wähle die Kategorie aus, in der deine Seite mit den Zusatzinformationen angelegt ist.
 infoPageNameExternal = Gib die URL zur externen Seite mit den Zusatzinformationen an.
 sectionLogoTitle = Soll im Webshop ein individuelles Logo für die Zahlungsart angezeigt werden?
 sectionLogoDescription = Standardmäßig wird ein automatisch hinterlegtes Standard-Logo im Webshop angezeigt. Aktiviere diese Option, um ein individuelles Logo für die Zahlungsart anzuzeigen.
 logoTypeName = Logo
-logoURLTypeName = Gib die URL zum gewünschten Logo an.
+logoURLTypeName =
 sectionPaymentMethodIconTitle = Soll das Logo der Zahlungsart im Footer deines Webshops angezeigt werden?
 sectionPaymentMethodIconDescription =
-logoURLDescription =
+logoURLDescription = Wähle das gewünschten Logo aus.
 logoDefault = Standard-Logo
 storeName = Mandant
