--- a/resources/lang/en/debitAssistant.properties
+++ b/resources/lang/en/debitAssistant.properties
@@ -16,14 +16,14 @@ infoPageTypeDescription = The information page offers your customers additional 
 infoPageTypeName = Info page
 infoPageInternal = Internal info page in the online store
 infoPageExternal = External info page
-infoPageNameInternal = Enter the ID of the category in which your internal info page is available.
+infoPageNameInternal = Choose the category in which your internal info page is available.
 infoPageNameExternal = Enter the URL of the external info page.
 sectionLogoTitle = Do you want to display an individually chosen logo for the payment method?
 sectionLogoDescription = An automatically provided logo is displayed by default in the online store. Activate the option to display an individually chosen logo.
 logoTypeName = Logo
-logoURLTypeName = Enter the URL of the desired logo.
+logoURLTypeName =
 sectionPaymentMethodIconTitle = Should the logo of the payment method be displayed in the footer of your online store?
 sectionPaymentMethodIconDescription =
-logoURLDescription = Logo-URL
+logoURLDescription = Choose the desired logo.
 logoDefault = Default logo
 storeName = Client
