--- a/resources/lang/en/debitAssistant.properties
+++ b/resources/lang/en/debitAssistant.properties
@@ -1,6 +1,6 @@
 assistantTitle = Debit
-assistantNo = No
-assistantYes = Yes
+assistantPaymentMethodIconCheckbox = Display logo
+assistantDebitForGuestCheckbox = Allow payment method
 shippingCountries = Shipping countries
 shippingCountriesTitle = For which countries of delivery should the payment method debit be available?
 shippingCountriesDescription = Activate the countries of delivery for which the payment method should be available in the online store.
@@ -16,7 +16,7 @@ infoPageTypeDescription = The information page offers your customers additional 
 infoPageTypeName = Info page
 infoPageInternal = Internal info page in the online store
 infoPageExternal = External info page
-infoPageNameInternal = Choose the category in which your internal info page is available.
+infoPageNameInternal = Select the category in which your internal info page is available.
 infoPageNameExternal = Enter the URL of the external info page.
 sectionLogoTitle = Do you want to display an individually chosen logo for the payment method?
 sectionLogoDescription = An automatically provided logo is displayed by default in the online store. Activate the option to display an individually chosen logo.
@@ -24,6 +24,6 @@ logoTypeName = Logo
 logoURLTypeName =
 sectionPaymentMethodIconTitle = Should the logo of the payment method be displayed in the footer of your online store?
 sectionPaymentMethodIconDescription =
-logoURLDescription = Choose the desired logo.
+logoURLDescription = Select the desired logo.
 logoDefault = Default logo
 storeName = Client
