- set container only if ceres exists - add short description - fix assistant topic

--- a/resources/lang/de/debitAssistant.properties
+++ b/resources/lang/de/debitAssistant.properties
@@ -1,4 +1,5 @@
 assistantTitle = Lastschrift
+assistantShortDescription = Assistent zum Einrichten der Zahlungsart Lastschrift
 assistantPaymentMethodIconCheckbox = Logo anzeigen
 assistantDebitForGuestCheckbox = Zahlungsart erlauben
 shippingCountries = Lieferländer
