--- a/resources/lang/en/debitAssistant.properties
+++ b/resources/lang/en/debitAssistant.properties
@@ -1,4 +1,5 @@
 assistantTitle = Debit
+assistantShortDescription = Assistant for setting up payment method debit
 assistantPaymentMethodIconCheckbox = Display logo
 assistantDebitForGuestCheckbox = Allow payment method
 shippingCountries = Shipping countries
