--- a/resources/lang/en/debitAssistant.properties
+++ b/resources/lang/en/debitAssistant.properties
@@ -1,5 +1,5 @@
 assistantTitle = Debit
-assistantShortDescription = Assistant for setting up payment method debit
+assistantShortDescription = Assistant for setting up the payment method debit
 assistantPaymentMethodIconCheckbox = Display logo
 assistantDebitForGuestCheckbox = Allow payment method
 shippingCountries = Shipping countries
