add changelog update plugin.json update properties

--- a/resources/lang/de/debitAssistant.properties
+++ b/resources/lang/de/debitAssistant.properties
@@ -28,3 +28,5 @@ sectionPaymentMethodIconDescription =
 logoURLDescription = Wähle das gewünschten Logo aus.
 logoDefault = Standard-Logo
 storeName = Mandant
+infoPageToggle = Info-Link anzeigen
+logoTypeToggle = Individuelles Logo anzeigen
