--- a/resources/lang/en/debitAssistant.properties
+++ b/resources/lang/en/debitAssistant.properties
@@ -28,3 +28,5 @@ sectionPaymentMethodIconDescription =
 logoURLDescription = Select the desired logo.
 logoDefault = Default logo
 storeName = Client
+infoPageToggle = Display info link
+logoTypeToggle = Display individual logo 
